--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,3 +4,14 @@ set -g bell-action none
 set -g mouse on
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
+
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
+
+bind-key v split-window -h
+bind-key s split-window -v
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
